# diffy

./: Cargo.toml  README.md  help.html  settings.html
diffy/: all.html  enum.ConflictStyle.html  enum.HunkRangeStrategy.html  enum.Line.html  enum.LineEnd.html  enum.LineEndHandling.html  enum.ParsePatchError.html  fn.apply.html  fn.apply_bytes.html  fn.apply_bytes_with_config.html  fn.apply_with_config.html  fn.create_patch.html  fn.create_patch_bytes.html  fn.merge.html  fn.merge_bytes.html  fn.patch_from_bytes.html  fn.patch_from_bytes_with_config.html  fn.patch_from_str.html  fn.patch_from_str_with_config.html  index.html  sidebar-items.js  struct.ApplyConfig.html  struct.ApplyError.html  struct.ApplyStats.html  struct.Diff.html  struct.DiffOptions.html  struct.FuzzyConfig.html  struct.Hunk.html  struct.HunkRange.html  struct.MergeOptions.html  struct.ParserConfig.html  struct.PatchFormatter.html  type.ApplyResult.html  type.Patch.html
search.index/: 01fcf123c9da.js  021559264501.js  044cdfd4c2c9.js  046e9887d108.js  05aafc8bd956.js  089fdca2329d.js  092800d71aa0.js  0b3eb2e4356c.js  10aa4968be99.js  129dc93add37.js  154751152dae.js  172d7ddab870.js  1a7921e3c489.js  1bff0a4d9f1b.js  1c5c16f719cb.js  1d4dbd003978.js  1e8b15989f61.js  245104808dc3.js  26fbaa1df4f4.js  291fa8272caa.js  2bbcd439a1a9.js  2e6f9677c4ea.js  2f175f2d2605.js  2f3a1a8d85af.js  324f87855f71.js  32c4d3bdc9d7.js  34240ea4d6e7.js  36c2943b675e.js  3a6f4746f55c.js  3b572c49b86b.js  3cb72b22e159.js  3cd71099ca8c.js  3d7f96ee30af.js  3e5f59ee35b4.js  43442be6d82e.js  4601282c6208.js  489fbdc73afc.js  (+17 more)
(+72 files in other folders)
