[package]
name = "diffy"
version = "0.4.2"
authors = ["Brandon Williams <bwilliams.eng@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tools for finding and manipulating differences between files"
documentation = "https://docs.rs/diffy"
repository = "https://github.com/bmwill/diffy"
readme = "README.md"
keywords = ["diff", "patch", "merge"]
categories = ["text-processing"]
rust-version = "1.80.0"
edition = "2021"

[dependencies]
nu-ansi-term = "0.50"
thiserror = "2.0.12"

[dev-dependencies]
insta = { version = "1.43.1", features = ["glob"] }
